[gd_scene load_steps=13 format=3 uid="uid://h740w4oxf64e"]

[ext_resource type="PackedScene" uid="uid://1nlrcogbuus8" path="res://scenes/enemies/baseEnemy.tscn" id="1_0occh"]
[ext_resource type="Script" path="res://scripts/juggernaut.gd" id="2_px8et"]
[ext_resource type="PackedScene" uid="uid://dfi6v0e22lt5e" path="res://scenes/enemies/juggernaut_turret.tscn" id="3_1hihb"]
[ext_resource type="PackedScene" uid="uid://c62l4dsmtajn2" path="res://scenes/hull_component.tscn" id="3_w0fij"]
[ext_resource type="Script" path="res://scripts/TopHitBox.gd" id="5_n5ren"]
[ext_resource type="Script" path="res://scripts/BottomHitBox.gd" id="5_y6f30"]
[ext_resource type="PackedScene" uid="uid://cqp4hml0uiu8r" path="res://assets/models/juggernaut.glb" id="7_fekrv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qsei6"]
size = Vector3(10.9018, 30.373, 30)

[sub_resource type="BoxShape3D" id="BoxShape3D_5an23"]
size = Vector3(1, 2.99219, 4.88672)

[sub_resource type="BoxShape3D" id="BoxShape3D_3q8t0"]
size = Vector3(1.92188, 3.22656, 4.11914)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_daho2"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="QuadMesh" id="QuadMesh_a4vkq"]
material = SubResource("StandardMaterial3D_daho2")
size = Vector2(1.42, 1)

[node name="Juggernaut" node_paths=PackedStringArray("hull_component_top", "hull_component_bottom") instance=ExtResource("1_0occh")]
collision_mask = 32
script = ExtResource("2_px8et")
hull_component_top = NodePath("HullComponentTop")
hull_component_bottom = NodePath("HullComponentBottom")
void_value = 500
enemy_type = "Juggernaut"

[node name="JuggernautTurret" parent="." index="0" instance=ExtResource("3_1hihb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.42925, 0, 0)

[node name="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0567932, 0, 0)
shape = SubResource("BoxShape3D_qsei6")

[node name="HullComponent" parent="." index="2"]
max_hull = 1000

[node name="HullComponentTop" parent="." index="3" instance=ExtResource("3_w0fij")]
max_hull = 750

[node name="HullComponentBottom" parent="." index="4" instance=ExtResource("3_w0fij")]
max_hull = 750

[node name="JuggernautHitboxes" type="Node3D" parent="." index="6"]

[node name="TopHitBox" type="Area3D" parent="JuggernautHitboxes" index="0"]
collision_layer = 2
collision_mask = 8
script = ExtResource("5_n5ren")

[node name="CollisionShape3D" type="CollisionShape3D" parent="JuggernautHitboxes/TopHitBox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.17204, 10.4909, 0)
shape = SubResource("BoxShape3D_5an23")

[node name="BottomHitBox" type="Area3D" parent="JuggernautHitboxes" index="1"]
collision_layer = 2
collision_mask = 0
script = ExtResource("5_y6f30")

[node name="CollisionShape3D" type="CollisionShape3D" parent="JuggernautHitboxes/BottomHitBox" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.93619, -9.369, 0)
shape = SubResource("BoxShape3D_3q8t0")

[node name="DefeatIndicatorTimer" type="Timer" parent="." index="9"]
one_shot = true

[node name="AttackTimers" type="Node3D" parent="." index="10"]

[node name="TopBombCooldown" type="Timer" parent="AttackTimers" index="0"]
unique_name_in_owner = true
one_shot = true

[node name="BottomBombCooldown" type="Timer" parent="AttackTimers" index="1"]
unique_name_in_owner = true
one_shot = true

[node name="BombResetTimer" type="Timer" parent="AttackTimers" index="2"]
wait_time = 18.0
one_shot = true
autostart = true

[node name="CollisionShape3D" parent="OnScreenDetect" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.0168, 0, 0)

[node name="juggernaut" parent="." index="12" instance=ExtResource("7_fekrv")]
transform = Transform3D(-1.04907e-07, 0, 2.4, 0, 2.4, 0, -2.4, 0, -1.04907e-07, 2.93518, 0.522041, 0.092411)

[node name="TopBombMuzzle" type="Marker3D" parent="juggernaut" index="0"]
unique_name_in_owner = true
transform = Transform3D(-1.50729e-08, 0, -0.344828, 0, 0.344828, 0, 0.344828, 0, -1.50729e-08, 0, 3.309, 0.931723)

[node name="BottomBombMuzzle" type="Marker3D" parent="juggernaut" index="2"]
unique_name_in_owner = true
transform = Transform3D(-1.50729e-08, 0, -0.344828, 0, 0.344828, 0, 0.344828, 0, -1.50729e-08, 0, -3.321, 0.931723)

[node name="WeakSpotBrokenNodes" type="Node3D" parent="." index="14"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 5.48026, 10.467, 1.05523)

[node name="TopWeakSpotBrokenNodes" type="Node3D" parent="WeakSpotBrokenNodes" index="0"]

[node name="TopWeakDisableModel1" type="MeshInstance3D" parent="WeakSpotBrokenNodes/TopWeakSpotBrokenNodes" index="0"]
unique_name_in_owner = true
visible = false
mesh = SubResource("QuadMesh_a4vkq")
skeleton = NodePath("../../..")

[node name="TopWeakDisableModel2" type="MeshInstance3D" parent="WeakSpotBrokenNodes/TopWeakSpotBrokenNodes" index="1"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.93645, 0.00800991, -0.000260353)
visible = false
mesh = SubResource("QuadMesh_a4vkq")
skeleton = NodePath("../TopWeakDisableModel1")

[node name="BottomWeakSpotBrokenNodes" type="Node3D" parent="WeakSpotBrokenNodes" index="1"]

[node name="BottomWeakDisableModel1" type="MeshInstance3D" parent="WeakSpotBrokenNodes/BottomWeakSpotBrokenNodes" index="0"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00362742, -19.9178, 0)
visible = false
mesh = SubResource("QuadMesh_a4vkq")
skeleton = NodePath("../../..")

[node name="BottomWeakDisableModel2" type="MeshInstance3D" parent="WeakSpotBrokenNodes/BottomWeakSpotBrokenNodes" index="1"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.92869, -19.9098, -0.000260353)
visible = false
mesh = SubResource("QuadMesh_a4vkq")
skeleton = NodePath("../../TopWeakSpotBrokenNodes/TopWeakDisableModel1")

[connection signal="defeated" from="HullComponentTop" to="." method="_on_hull_component_top_defeated"]
[connection signal="hull_changed" from="HullComponentTop" to="." method="_on_hull_component_top_hull_changed"]
[connection signal="defeated" from="HullComponentBottom" to="." method="_on_hull_component_bottom_defeated"]
[connection signal="hull_changed" from="HullComponentBottom" to="." method="_on_hull_component_bottom_hull_changed"]
[connection signal="area_entered" from="JuggernautHitboxes/TopHitBox" to="JuggernautHitboxes" method="_on_top_hit_box_area_entered"]
[connection signal="area_entered" from="JuggernautHitboxes/TopHitBox" to="JuggernautHitboxes/TopHitBox" method="_on_area_entered"]
[connection signal="area_entered" from="JuggernautHitboxes/BottomHitBox" to="JuggernautHitboxes" method="_on_bottom_hit_box_area_entered"]
[connection signal="timeout" from="DefeatIndicatorTimer" to="." method="_on_defeat_indicator_timer_timeout"]
[connection signal="timeout" from="AttackTimers/BombResetTimer" to="." method="_on_bomb_reset_timer_timeout"]
